modified some styles of the aside information

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -2,3 +2,5 @@
 @import "./variables/default";
 @import "./variables/header";
 @import "./variables/nav";
+@import "./variables/main";
+@import "./variables/aside";
