--- a/scss/variables/_default.scss
+++ b/scss/variables/_default.scss
@@ -1,6 +1,17 @@
 body {
     box-sizing: border-box;
     font-family: "Lora";
+    background-color: #181719;
+    color: #ffffff;
+    padding: 10px;
+    margin: 0;
+}
+h1 {
+    font-family: "Crimson Pro";
+    font-size: 14px;
+    text-transform: uppercase;
+    border: 1px solid #ffffff;
+    padding: 16px;
 }
 
 img {
