--- a/scss/variables/_nav.scss
+++ b/scss/variables/_nav.scss
@@ -1,57 +1,70 @@
-
 .dropdown_trigger {
-    width: 1rem;
-    height: 1rem;
-    display: inline-block;
-    border-radius: 0.25rem;
-    background-image: url(../images/menu.svg);
-    background-size: 1rem;
-    background-repeat: no-repeat;
+  width: 3rem;
+  height: 3rem;
+  display: inline-block;
+  border-radius: 0.25rem;
+  background-image: url(../images/menu.svg);
+  background-size: 2rem;
+  background-repeat: no-repeat;
 
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
-  
-   body > nav {
-    position: absolute;
-    padding: 1rem;
-    background-color: #f8f8f8;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 280px;
-    transform: translate(-110%);
-    transition: transform 0.3s;
-    z-index: 1;
-  }
-  
-  
-  nav ul li {
-    list-style: none;
-  }
-  
-  
-  nav a {
-    text-decoration: none;
-    line-height: 3rem;
-  }
-  
-  nav > header > h1 {
-    text-transform: uppercase;
-    color: #fa6890;
-    font-size: 20px;
-    font-weight: 700;
-  }
-  
-  @media (min-width: 768px) {
-  
-   body > nav {
+  position: absolute;
+  top: 40px;
+  right: 0;
+}
+
+.navigation {
+  position: absolute;
+  padding: 1rem;
+  background-color: #181719;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 280px;
+  transform: translate(-110%);
+  transition: transform 0.3s;
+  line-height: 24px;
+  z-index: 1;
+}
+
+.list__menu_dropdown li {
+  list-style: none;
+}
+
+.navigation a {
+  font-family: "Montserrat";
+  font-size: 18px;
+  line-height: 21.94px;
+  text-decoration: none;
+  line-height: 5rem;
+  color: #ffffff;
+  vertical-align: middle;
+}
+
+.navigation__close {
+  top: 0;
+  right: 0;
+  position: absolute;
+  font-size: 23px;
+  border: none;
+  color: #f2f2f2;
+  background-color: #181719;
+}
+.contents_menu {
+  font-weight: 500;
+}
+
+.contents_menu-home {
+  font-weight: 700;
+}
+
+@media (min-width: 1440px) {
+  .navigation {
     padding: 0;
     background-color: transparent;
     position: absolute;
     top: 0;
-    left: auto;
+    left: 60%;
+    right: 60px;
     bottom: auto;
     width: auto;
     box-shadow: none;
@@ -59,20 +72,27 @@
     transition: none;
     line-height: 0;
   }
-  nav > header > h1 {
-    margin: 0;
-    padding: 0;
-  }
-  
-  body > nav > ul {
+
+  .list__menu_dropdown {
     display: flex;
     flex-direction: row;
-    transform: translate(150%);
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .main__description {
+    min-width: 250px;
+  }
+
+  .navigation__close {
+    display: none;
   }
 
   .dropdown_trigger {
     display: none;
     content: none;
   }
+  .navigation a {
+    margin-left: 2rem;
   }
-  
+}
