--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -1,30 +1,59 @@
 @font-face {
   font-weight: 400;
-  font-family: "DM Sans";
-  font-style: normal;
-  src: local("DM Sans"), local("dm-ans"), url("./fonts/dm_sans_400.woff2") format(woff2), url("./fonts/dm_sans_400.woff") format(woff); }
-
-@font-face {
-  font-weight: 700;
-  font-family: "DM Sans";
-  font-style: normal;
-  src: local("DM Sans"), local("dm-ans"), url("./fonts/dm_sans_700.woff2") format(woff2), url("./fonts/dm_sans_700.woff") format(woff); }
+  font-family: "Lora";
+  font-style: italic;
+  src: local("Lora"), local("lora"), url("./transformed_fonts/Lora-Italic.woff2") format(woff2), url("./transformed_fonts/Lora-Italic.woff") format(woff); }
 
 @font-face {
   font-weight: 400;
-  font-family: "DM Sans";
-  font-style: normal;
-  src: local("DM Sans"), local("dm-ans"), url("./fonts/dm_sans_400_italic.woff2") format(woff2), url("./fonts/dm_sans_400_italic.woff") format(woff); }
+  font-family: "Lora";
+  font-style: italic;
+  src: local("Lora"), local("lora"), url("./transformed_fonts/Lora-Regular.woff2") format(woff2), url("./transformed_fonts/Lora-Regular.woff") format(woff); }
 
 @font-face {
-  font-weight: 400;
-  font-family: "dm_serif_display";
+  font-weight: 500;
+  font-family: "Montserrat";
+  font-style: nomal;
+  src: local("Montserrat"), local("montserrat"), url("./fonts/dm_sans_400_italic.woff2") format(woff2), url("./fonts/dm_sans_400_italic.woff") format(woff); }
+
+@font-face {
+  font-weight: 300;
+  font-family: "Montserrat";
   font-style: normal;
-  src: local("DM Serif Display"), local("dm_serif_display"), url("./fonts/dm_serif_display_400.woff2") format(woff2), url("./fonts/dm_serif_display_400.woff") format(woff); }
+  src: local("Montserrat"), local("montserrat"), url("./fonts/dm_serif_display_400.woff2") format(woff2), url("./fonts/dm_serif_display_400.woff") format(woff); }
+
+@font-face {
+  font-weight: 600;
+  font-family: "Montserrat";
+  font-style: normal;
+  src: local("Montserrat"), local("montserrat"), url("./fonts/dm_serif_display_400.woff2") format(woff2), url("./fonts/dm_serif_display_400.woff") format(woff); }
+
+@font-face {
+  font-weight: 200;
+  font-family: "Crimson Pro";
+  font-style: normal;
+  src: local("Crimson Pro"), local("crimson_pro"), url("./transformed_fonts/CrimsonPro-ExtraLight.woff2") format(woff2), url("./transformed_fonts/CrimsonPro-ExtraLightItalic.woff") format(woff); }
+
+@font-face {
+  font-weight: 200;
+  font-family: "Crimson Pro";
+  font-style: italic;
+  src: local("Crimson Pro"), local("crimson_pro"), url("./transformed_fonts/CrimsonPro-ExtraLightItalic.woff2") format(woff2), url("./transformed_fonts/CrimsonPro-ExtraLightItalic.woff") format(woff); }
 
 body {
   box-sizing: border-box;
-  font-family: "Lora"; }
+  font-family: "Lora";
+  background-color: #181719;
+  color: #ffffff;
+  padding: 10px;
+  margin: 0; }
+
+h1 {
+  font-family: "Crimson Pro";
+  font-size: 14px;
+  text-transform: uppercase;
+  border: 1px solid #ffffff;
+  padding: 16px; }
 
 img {
   max-width: 100%; }
@@ -54,72 +83,175 @@ body > [type="checkbox"]:checked ~ nav > button {
 [type="checkbox"] {
   visibility: hidden; }
 
-@media (min-width: 768px) {
+@media (min-width: 1440px) {
   body > header > label,
   body > header > p {
-    display: none; }
-  body > header {
-    padding: 1.25rem; }
-  .title {
     display: none; } }
 
 .dropdown_trigger {
-  width: 1rem;
-  height: 1rem;
+  width: 3rem;
+  height: 3rem;
   display: inline-block;
   border-radius: 0.25rem;
   background-image: url(../images/menu.svg);
-  background-size: 1rem;
+  background-size: 2rem;
   background-repeat: no-repeat;
   position: absolute;
-  top: 0;
+  top: 40px;
   right: 0; }
 
-body > nav {
+.navigation {
   position: absolute;
   padding: 1rem;
-  background-color: #f8f8f8;
+  background-color: #181719;
   top: 0;
   left: 0;
   bottom: 0;
   width: 280px;
   transform: translate(-110%);
   transition: transform 0.3s;
+  line-height: 24px;
   z-index: 1; }
 
-nav ul li {
+.list__menu_dropdown li {
   list-style: none; }
 
-nav a {
+.navigation a {
+  font-family: "Montserrat";
+  font-size: 18px;
+  line-height: 21.94px;
   text-decoration: none;
-  line-height: 3rem; }
+  line-height: 5rem;
+  color: #ffffff;
+  vertical-align: middle; }
 
-nav > header > h1 {
-  text-transform: uppercase;
-  color: #fa6890;
-  font-size: 20px;
+.navigation__close {
+  top: 0;
+  right: 0;
+  position: absolute;
+  font-size: 23px;
+  border: none;
+  color: #f2f2f2;
+  background-color: #181719; }
+
+.contents_menu {
+  font-weight: 500; }
+
+.contents_menu-home {
   font-weight: 700; }
 
-@media (min-width: 768px) {
-  body > nav {
+@media (min-width: 1440px) {
+  .navigation {
     padding: 0;
     background-color: transparent;
     position: absolute;
     top: 0;
-    left: auto;
+    left: 60%;
+    right: 60px;
     bottom: auto;
     width: auto;
     box-shadow: none;
     transform: none;
     transition: none;
     line-height: 0; }
-  nav > header > h1 {
-    margin: 0;
-    padding: 0; }
-  body > nav > ul {
+  .list__menu_dropdown {
     display: flex;
     flex-direction: row;
-    transform: translate(150%); }
+    width: 100%;
+    justify-content: space-between; }
+  .main__description {
+    min-width: 250px; }
+  .navigation__close {
+    display: none; }
   .dropdown_trigger {
     display: none;
-    content: none; } }
+    content: none; }
+  .navigation a {
+    margin-left: 2rem; } }
+
+main {
+  padding: 5px; }
+
+.main__headings {
+  font-size: 36px;
+  font-family: "Lora";
+  margin-bottom: 24px; }
+
+.main__headings {
+  font-weight: 300; }
+
+.main__description {
+  font-family: Montserrat;
+  font-size: 16px;
+  width: 50%;
+  color: #c8c7c7; }
+
+.main__info {
+  font-family: "Montserrat";
+  font-style: SemiBold;
+  font-size: 16px;
+  width: 500px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: #ffffff;
+  background-color: #181719;
+  border: none;
+  outline: none;
+  font-weight: 700; }
+
+.main__info img {
+  width: 2rem;
+  padding-left: 2rem; }
+
+@media (min-width: 1440px) {
+  article.main {
+    display: flex;
+    flex-direction: row; }
+  .main__description {
+    width: 76%;
+    font-size: 24px; } }
+
+.information {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  top: 20px; }
+
+.information__content {
+  background-color: #181719;
+  width: 70%;
+  position: absolute;
+  top: 80%;
+  right: 40px; }
+
+.information__details {
+  width: 50%; }
+
+.information__details::before {
+  content: "";
+  display: block;
+  background-image: url("../images/smile_girl.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin: 0;
+  padding: 0; }
+
+.information__more--detailed {
+  position: absolute;
+  top: 0;
+  left: 90px; }
+
+.information__detailed--Aliza {
+  font-weight: 700; }
+
+@media (min-width: 1440px) {
+  .information__content {
+    background-color: #181719;
+    width: 70%;
+    position: absolute;
+    top: 90%;
+    right: 40px; } }
