changed the form of the layout of the desktop and deleted the font-family for the header

--- a/scss/variables/_main.scss
+++ b/scss/variables/_main.scss
@@ -1,10 +1,9 @@
 main {
-    padding: 5px;
+    padding: 150px 0;
 }
 
 .main__headings {
   font-size: 36px;
-  font-family: "Lora";
   margin-bottom: 24px;
 }
 .main__headings {
