--- a/scss/variables/_default.scss
+++ b/scss/variables/_default.scss
@@ -3,7 +3,7 @@ body {
     font-family: "Lora";
     background-color: #181719;
     color: #ffffff;
-    padding: 50px;
+    padding: 10px;
     margin: 0;
 }
 h1 {
@@ -16,4 +16,10 @@ h1 {
 
 img {
     max-width: 100%;
+}
+
+@media (min-width: 1440px) {
+    body {
+        padding: 50px;
+    }
 }
