--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -45,7 +45,7 @@ body {
   font-family: "Lora";
   background-color: #181719;
   color: #ffffff;
-  padding: 50px;
+  padding: 10px;
   margin: 0; }
 
 h1 {
@@ -57,6 +57,10 @@ h1 {
 
 img {
   max-width: 100%; }
+
+@media (min-width: 1440px) {
+  body {
+    padding: 50px; } }
 
 body > header {
   display: flex;
@@ -99,7 +103,7 @@ body > [type="checkbox"]:checked ~ nav > button {
   background-size: 2rem;
   background-repeat: no-repeat;
   position: absolute;
-  top: 90px;
+  top: 40px;
   right: 0; }
 
 .navigation {
@@ -169,12 +173,13 @@ body > [type="checkbox"]:checked ~ nav > button {
     display: none; }
   .dropdown_trigger {
     display: none;
-    content: none; }
+    content: none;
+    top: 90px; }
   .navigation a {
     margin-left: 2rem; } }
 
 main {
-  padding: 150px 0; }
+  padding: 10px; }
 
 .main__headings {
   font-size: 36px;
@@ -213,7 +218,9 @@ main {
     flex-direction: row; }
   .main__description {
     width: 76%;
-    font-size: 24px; } }
+    font-size: 24px; }
+  main {
+    padding: 150px 0; } }
 
 .information {
   position: relative;
